--- a/TestDriver/TestDriver.csproj
+++ b/TestDriver/TestDriver.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="LinkedList\BeginOfCircularLinkedList.cs" />
     <Compile Include="LinkedList\SumByLinkedList.cs" />
     <Compile Include="LinkedList\DeleteNodeInMiddle.cs" />
     <Compile Include="LinkedList\FindKthToLastElement.cs" />
