--- a/TestDriver/TestDriver.csproj
+++ b/TestDriver/TestDriver.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="LinkedList\BeginOfCircularLinkedList.cs" />
+    <Compile Include="LinkedList\LinkedListPalindrome.cs" />
     <Compile Include="LinkedList\SumByLinkedList.cs" />
     <Compile Include="LinkedList\DeleteNodeInMiddle.cs" />
     <Compile Include="LinkedList\FindKthToLastElement.cs" />
