--- a/TestDriver/TestDriver.csproj
+++ b/TestDriver/TestDriver.csproj
@@ -51,6 +51,9 @@
     <Compile Include="LinkedList\RemoveDuplicates.cs" />
     <Compile Include="Matrices\RotateImage.cs" />
     <Compile Include="Matrices\SetZeroToMatrix.cs" />
+    <Compile Include="StacksQueues\SetOfStacks.cs" />
+    <Compile Include="StacksQueues\ImplementThreeStacks.cs" />
+    <Compile Include="StacksQueues\MinValueStack.cs" />
     <Compile Include="StacksQueues\Node.cs" />
     <Compile Include="StacksQueues\Queue.cs" />
     <Compile Include="StacksQueues\Stack.cs" />
