implemented myqueue class

--- a/TestDriver/TestDriver.csproj
+++ b/TestDriver/TestDriver.csproj
@@ -51,12 +51,14 @@
     <Compile Include="LinkedList\RemoveDuplicates.cs" />
     <Compile Include="Matrices\RotateImage.cs" />
     <Compile Include="Matrices\SetZeroToMatrix.cs" />
+    <Compile Include="StacksQueues\MyQueue.cs" />
     <Compile Include="StacksQueues\SetOfStacks.cs" />
     <Compile Include="StacksQueues\ImplementThreeStacks.cs" />
     <Compile Include="StacksQueues\MinValueStack.cs" />
     <Compile Include="StacksQueues\Node.cs" />
     <Compile Include="StacksQueues\Queue.cs" />
     <Compile Include="StacksQueues\Stack.cs" />
+    <Compile Include="StacksQueues\TowerOfHanoiDiskSliding.cs" />
     <Compile Include="Strings\HasAllUniqueCharacters.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
