--- a/TestDriver/TestDriver.csproj
+++ b/TestDriver/TestDriver.csproj
@@ -57,6 +57,7 @@
     <Compile Include="StacksQueues\MinValueStack.cs" />
     <Compile Include="StacksQueues\Node.cs" />
     <Compile Include="StacksQueues\Queue.cs" />
+    <Compile Include="StacksQueues\SortStack.cs" />
     <Compile Include="StacksQueues\Stack.cs" />
     <Compile Include="StacksQueues\TowerOfHanoiDiskSliding.cs" />
     <Compile Include="Strings\HasAllUniqueCharacters.cs" />
